# sim_carto_l1_ros2

./: .gitattributes  CMakeLists.txt  README.md  package.xml
bag/: L1_ros2.db3  metadata.yaml
description/: robot.urdf  robot_core_r1.xacro  robot_r1.urdf.xacro
launch/: assets_writer3d.launch.py  simbag.launch.py  simlocalizebag.launch.py
mesh/: L1 3D Model.stl:Zone.Identifier
param/: R1_3D_localize.lua  R1_3D_mapping.lua  assets_writer_3d.lua
